--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,7 @@
+[build-system]
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
+
 [project]
 name = "pomodoro_cmaspi"
 version = "0.0.1"
@@ -22,4 +26,5 @@ dependencies = [
 "Homepage" = "https://github.com/cmaspi/Pomodoro-terminal/"
 "Bug Tracker" = "https://github.com/cmaspi/Pomodoro-terminal/issues"
 
-
+[project.scripts]
+pomodoro = "pomodoro.pomodoro:main"
