--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,8 @@ requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "pomodoro_cmaspi"
-version = "0.0.1"
+name = "pomodoro"
+version = "0.0.1a0"
 authors = [
   { name="Chirag Mehta", email="chiragmehta@gmail.com" },
 ]
